<resources>

    <!-- string for common -->
    <string name="zhimeng_common_message">Message</string>

    <!-- string for CropImageActivity -->
    <string name="zhimeng_activity_crop_image_toolbar_title">Edit image</string>
    <string name="zhimeng_activity_crop_image_menu_ok">OK</string>
    <string name="zhimeng_activity_crop_waiting_cropping">Waiting for cropping</string>
    <string name="zhimeng_activity_crop_waiting_reading">Waiting for reading</string>
    <string name="zhimeng_activity_crop_dialog_msg">Where are you going to get a photo?</string>
    <string name="zhimeng_activity_crop_dialog_bt1">File</string>
    <string name="zhimeng_activity_crop_dialog_bt2">Camera</string>

    <!-- strings for AuthActivity -->
    <string name="zhimeng_view_login_login_title">Login</string>
    <string name="zhimeng_view_login_register_title">Register</string>
    <string name="zhimeng_view_login_username_hint">Username</string>
    <string name="zhimeng_view_login_password_hint">Password</string>
    <string name="zhimeng_view_login_login_button">SignIn</string>
    <string name="zhimeng_view_login_to_register">Has no account?</string>
    <string name="zhimeng_view_login_username_cannot_blank">Username cannot be blank</string>
    <string name="zhimeng_view_login_password_cannot_blank">Password cannot be bland</string>
    <string name="zhimeng_view_login_login_success">Sign in success</string>
    <string name="zhimeng_view_login_incorrect_info">Incorrect username or password</string>
    <string name="zhimeng_view_login_register_button">SignUp</string>
    <string name="zhimeng_view_login_email_hint">Email</string>
    <string name="zhimeng_view_login_password_confirm_hint">Password confirm</string>
    <string name="zhimeng_view_login_to_login">Has a Account?</string>
    <string name="zhimeng_view_login_email_blank">Email cannot be blank</string>
    <string name="zhimeng_view_login_password_too_short">Password is too short</string>
    <string name="zhimeng_view_login_register_success">Sign up success</string>
    <string name="zhimeng_view_login_username_exists">Username exists</string>
    <string name="zhimeng_view_login_password_not_match">Password confirm not match</string>
    <string name="zhimeng_view_login_email_exists">Email exists</string>
    <string name="zhimeng_view_login_username_blank">Username cannot be blank</string>

    <!-- string for FileSelectActivity -->
    <string name="zhimeng_activity_file_select_toolbar_title">Select File</string>

    <!-- string for BigImageActivity -->
    <string name="zhimeng_activity_big_image_previous">Previous</string>
    <string name="zhimeng_activity_big_image_next">Next</string>
    <string name="zhimeng_activity_big_image_first_image">First image</string>
    <string name="zhimeng_activity_big_image_final_image">Final image</string>

</resources>
