<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/form"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="0dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="24sp"
        android:text="@string/zhimeng_view_login_register_title"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_container"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="14sp"
            android:hint="@string/zhimeng_view_login_email_hint"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="14sp"
            android:hint="@string/zhimeng_view_login_username_hint"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp"
            android:hint="@string/zhimeng_view_login_password_hint" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_container"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp"
            android:hint="@string/zhimeng_view_login_password_confirm_hint" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="6dp"
            android:id="@+id/change_button"
            android:text="@string/zhimeng_view_login_to_login"
            android:textColor="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:textStyle="bold"
            android:background="#00000000"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="6dp"
            android:id="@+id/action_button"
            style="?android:attr/buttonBarButtonStyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/zhimeng_view_login_register_button"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="#00000000"/>

    </LinearLayout>

</LinearLayout>